<?xml version="1.0"?>
<package>
  <name>jenga_robot</name>
  <version>0.0.0</version>
  <description>The jenga_robot package</description>
  <maintainer email="kbogert@todo.todo">kbogert</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>motion_planning</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  
  

  <run_depend>roscpp</run_depend>
  <run_depend>motion_planning</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
 
  

</package>
